--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -47,6 +47,11 @@ body {
     text-align: center;
     margin: 10px;
   }
+  .weather-icon {
+    
+    width: 60px;
+    height:30px;
+  }
   
   .temperature {
     font-size: 24px;
